# astro

./: .cache  application.yml  config.py  keep_alive.py  keep_alive2.py  main.py  mainbank.json  mutedUsers.json  playing.json  playlist.json  previous.json  pyproject.toml  queue.json  tasks.json  userJson(old).json  userJson.json  utils.py  volumes.json
logs/: spring.log.2021-05-11.09777681504543.tmp  spring.log.2021-10-26.031526170370916.tmp  spring.log.2021-10-26.031527690587536.tmp  spring.log.2021-10-26.032959395279085.tmp
static/css/: sb-admin-d.css  styles.css
templates/: dashEx.html  dashboard.html  dashboardNice.html  dashboardTest.html  guild.html  guildTest.html  index.html
