[tool.poetry]
name = "aoztanirbot-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.2"
pyowm = "^3.1.1"
wikipedia = "^1.4.0"
youtube-dl = "^2021.1.24"
bs4 = "^0.0.1"
discord = "^1.0.1"
flask = "^1.1.2"
pafy = "^0.5.5"
PyNaCl = "^1.4.0"
youtube-search-python = "^1.3.6"
bottle = "^0.12.19"
google = "^3.0.0"
pyjokes = "^0.6.0"
lyricsgenius = "^2.0.2"
pylyrics = "^1.1.0"
lyrics-extractor = "^3.0.1"
emoji-translate = "^0.1.0"
google-images-download = "^2.8.0"
spacy = "^3.0.1"
google-images-search = "^1.3.4"
simplejson = "^3.17.2"
pytz = "^2021.1"
music-recommender = "^1.0.5"
oauth = "^1.0.1"
discord-ext-ipc = "^2.0.0"
profanity = "^1.1"
covid19-data = "^1.2.0"
syllables = "^0.1.0"
pyiku = "^0.0.2"
pyverse = "^1.0.0"
textcaptcha = "^0.2.0"
praw = "^7.2.0"
discord-ext-dashboard = "^0.2.5"
Quart = "^0.14.1"
discordbotdash = "^1.2.3"
asyncpraw = "^7.2.0"
spotipy = "^2.17.1"
discord-pretty-help = "^1.3.0"
replit = "^3.0.0"
config = "^0.5.0"
psutil = "^5.8.0"
pymongo = "^3.11.3"
dnspython = "^2.1.0"
ratelimit = "^2.2.1"
flask-cors = "^3.0.10"
flask-limiter = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
